# rs-torch-panda

./: .gitignore  README.md
combined/: example-app-rs-torch.cpp
combined/example/: CMakeLists.txt  example-app-rs-panda.cpp
franka_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
franka_ws/devel/include/controller_test/: JointTorqueComparison.h  compliance_paramConfig.h  desired_mass_paramConfig.h
franka_ws/devel/lib/pkgconfig/: controller_test.pc  franka_example_controllers.pc  own_example_controllers.pc  simple_test.pc
franka_ws/devel/lib/simple_test/: node_cpp
franka_ws/devel/share/simple_test/cmake/: simple_testConfig.cmake
franka_ws/src/controller_test/: CMakeLists.txt  controller_test_plugin.xml  package.xml
franka_ws/src/controller_test/cfg/: compliance_param.cfg  desired_mass_param.cfg
franka_ws/src/controller_test/config/: controller_test.yaml
franka_ws/src/controller_test/launch/: cartesian_pose_example_controller.launch  model_example_controller.launch  move_to_start.launch
franka_ws/src/controller_test/src/: cartesian_pose_example_controller.cpp
franka_ws/src/simple_test/: CMakeLists.txt  package.xml
franka_ws/src/simple_test/src/: test_node.cpp
misc/: Untitled.ipynb  quintic_polynomial.ipynb
misc/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  quintic_polynomial-checkpoint.ipynb
misc/quintic_polynomial/: CMakeLists.txt
misc/quintic_polynomial/src/: quintic_polynomial.cpp
panda/example/: CMakeLists.txt  generate_cartesian_pose_motion.cpp
torch/: traced_policy.pt
torch/example-app/: example-app.cpp
(+20 files in other folders)
